# plugin-dify

./: .gitignore  README.md  pyproject.toml
.github/workflows/: CI.yml  PR.yml
amrita_plugin_dify/: __init__.py  config.py  models.py  search.py
